name:                nmea0183
version:             1.0.0
synopsis:            A library for parsing and emitting NMEA0183 strings
-- description:
homepage:            https://github.com/relrod/nmea0183
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Text.Protocol.NMEA0183.Types.Talker
                     , Text.Protocol.NMEA0183.Types.Talker.GGA
                     , Text.Protocol.NMEA0183.Parsers.Sentence
                     , Text.Protocol.NMEA0183.Parsers.Talker.GGA
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                       -- for testing for now
                     , attoparsec
                     , lens
                     , parsers
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
